compiling_error.txt
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\Questforfibprime.cpp: In function 'int main()':
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\Questforfibprime.cpp:15:45: error: expected primary-expression before ',' token
     scanf("%5s %29s %li %29[-0-9a-zA-Z? ]", , , &digits, );
                                             ^
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\Questforfibprime.cpp:15:47: error: expected primary-expression before ',' token
     scanf("%5s %29s %li %29[-0-9a-zA-Z? ]", , , &digits, );
                                               ^
C:\Users\chri94f2\Documents\GitHub\cpp_language_tasks\Questforfibprime.cpp:15:58: error: expected primary-expression before ')' token
     scanf("%5s %29s %li %29[-0-9a-zA-Z? ]", , , &digits, );
                                                          ^
